<resources>
    <string name="app_name">GitHubClient</string>

    <string name="blank">%d</string>


    //Repository Detail
    <string name="repositorydetail_id">Id</string>
    <string name="repositorydetail_name">Name</string>
    <string name="repositorydetail_fullname">Full Name</string>
    <string name="repositorydetail_ownername">Owner Name</string>
    <string name="repositorydetail_description">Description</string>
    <string name="repositorydetail_language">Language</string>
    <string name="repositorydetail_homepage">Home Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
