<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.crazyminds.githubclient.RepositoryDetailActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/rowColow"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_id_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_id"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/repositorydetail_id_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1111"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_name"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Repo 1"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/rowColow"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_fullname_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_fullname"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_fullname_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="fullname/"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_ownername_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_ownername"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_ownername_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="joao kleber da silva de souza "
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/rowColow"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_description"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This repository is a co-work with friends who wnats to be millioneres ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
            android:ellipsize="end"
            android:layout_weight="1"
            android:textAlignment="center"
            android:maxLines="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_language_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_language"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_language_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/rowColow"
        android:padding="5dp">

        <TextView
            android:id="@+id/repositorydetail_homepage_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositorydetail_homepage"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/repositorydetail_homepage_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="http://www.crazyminds.net/crystalcatchergame"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    </LinearLayout>
</FrameLayout>
